crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_top_with_search.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx | top 10 uri\")"
---
WITH _s0 AS (
  SELECT "uri", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
  WHERE "service" = ?
  GROUP BY "uri"
)
SELECT *
FROM "_s0"
ORDER BY "count" DESC
LIMIT 10
---
params:
  0: 'nginx'
