crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_bare_text.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"error\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("message" ILIKE ? OR "_raw" ILIKE ?)
---
params:
  0: '%error%'
  1: '%error%'
