crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_comparison_gte.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"status:>=400\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "status" >= ?
---
params:
  0: 400
