crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_earliest_only.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"earliest=\"2026-03-14T00:00:00Z\" level=error\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE TRY_CAST("_time" AS TIMESTAMP) >= CAST(? AS TIMESTAMP) AND "severity" BETWEEN 17 AND 20
---
params:
  0: '2026-03-14T00:00:00Z'
